--- a/0-empty_chapter.tex
+++ b/0-empty_chapter.tex
@@ -1,4 +1,4 @@
-% Nicolas Castel PhD thesis -- (C) 2023
+% Emmanuel Ren PhD thesis -- (C) 2023
 \documentclass[thesis]{subfiles}
 
 \begin{document}
