--- a/9-conclusion.tex
+++ b/9-conclusion.tex
@@ -1,5 +1,5 @@
 %!TEX root = A-web.tex
-% Nicolas Castel PhD thesis -- (C) 2023
+% Emmanuel Ren PhD thesis -- (C) 2023
 
 \chapter*{General conclusions}
 
