--- a/main.tex
+++ b/main.tex
@@ -338,13 +338,15 @@
     \pagestyle{fancy}
     \input{0-intro}
 
-    \subfile{0-empty_chapter}
+ %   \subfile{0-empty_chapter}
 
-%    \subfile{1-context}
-%    \subfile{2-methods}
-%    \subfile{3-reaxff}
-%    \subfile{4-mlp}
-%    \subfile{5-mechanical}
+    \subfile{1-screening}
+    \subfile{2-thermo}
+    \subfile{3-fastsim}
+    \subfile{4-ml}
+    \subfile{5-diffusion}
+    \subfile{6-perspectives}
+
 
     \input{9-conclusion}
 
@@ -357,7 +359,7 @@
 
     \input{publist}
 
-%    \printglobalbibliography
+   \printglobalbibliography
 
     \subfile{Z-resume-fr}
 
