--- a/remerciements.tex
+++ b/remerciements.tex
@@ -16,7 +16,7 @@
 \begingroup
 \itshape
 
-En premier lieu, je voudrais adresser ici mes plus vifs remerciements à Dabeen Oh qui a toujour été là pour me soutenir.
+En premier lieu, je voudrais adresser ici mes plus vifs remerciements 
 
 \endgroup
 
