--- a/thesis.bib
+++ b/thesis.bib
@@ -243,7 +243,7 @@
   doi = {10.1021/acscentsci.2c01177},
   url = {https://doi.org/10.1021/acscentsci.2c01177},
   year = {2023},
-  month = mar,
+  month = {mar},
   publisher = {American Chemical Society ({ACS})},
   author = {Kevin Maik Jablonka and Andrew S. Rosen and Aditi S. Krishnapriyan and Berend Smit},
   title = {An Ecosystem for Digital Reticular Chemistry},
