single file compile working

--- a/1-screening.tex
+++ b/1-screening.tex
@@ -1,5 +1,5 @@
-% Emmanuel Ren PhD thesis -- (C) 2023
-\documentclass[thesis]{subfiles}
+%!TeX root = 1-screening
+\documentclass[main]{subfiles}
 
 \begin{document}
 
@@ -10,6 +10,10 @@
 \section{Introduction to the main screening tools}
 
 \subsection{Databases}
+
+\todo{Ren2021}
+
+In the past decade, large-scale computational screening studies have become an important part of the materials science innovation pipeline,\cite{Hautier_2019, Cole_2020} trying to move beyond the serendipitous model of materials discovery.\cite{Ludwig_2019, Stein_2019} High-throughput computational discovery techniques are used in the generation of novel hypothetical structures for screening,\cite{Wilmer_2011, Boyd_2016} as well as in trying to explore more in depth and more systematically the materials whose structure has already been published, in order to map their physical and chemical properties.\cite{GomezGualdron_2014,Moliner_2019,SalcedoPerez_2019} While the idea of large-scale exploration of materials is not new, and such databases --- whether experimental or computational in the source of their data --- have been around for several decades now,\cite{PDB_1971, Grazulis_2009, Groom_2016} this field has recently seen a rapid expansion enabled by several factors.
 
 \subsection{Simulation tools}
 
