--- a/2-thermo.tex
+++ b/2-thermo.tex
@@ -1,5 +1,6 @@
 % Emmanuel Ren PhD thesis -- (C) 2023
-\documentclass[thesis]{subfiles}
+%!TeX root = 2-thermo
+\documentclass[main]{subfiles}
 
 \begin{document}
 
