--- a/3-fastsim.tex
+++ b/3-fastsim.tex
@@ -1,5 +1,6 @@
 % Emmanuel Ren PhD thesis -- (C) 2023
-\documentclass[thesis]{subfiles}
+%!TeX root = 3-fastsim
+\documentclass[main]{subfiles}
 
 \begin{document}
 
