--- a/6-perspectives.tex
+++ b/6-perspectives.tex
@@ -1,5 +1,6 @@
 % Emmanuel Ren PhD thesis -- (C) 2023
-\documentclass[thesis]{subfiles}
+%!TeX root = 6-perspectives
+\documentclass[main]{subfiles}
 
 \begin{document}
 
