--- a/publications.bib
+++ b/publications.bib
@@ -6,7 +6,9 @@
   volume={231},
   pages={201--223},
   year={2021},
-  publisher={Royal Society of Chemistry}
+  publisher={Royal Society of Chemistry},
+  doi = {10.1039/D1FD00024A},
+  url = {https://doi.org/10.1039/D1FD00024A},
 }
 
 @article{Ren_2022,
@@ -18,7 +20,9 @@
   number={4},
   pages={355--374},
   year={2022},
-  publisher={Royal Society of Chemistry}
+  publisher={Royal Society of Chemistry},
+  doi = {10.1039/D2DD00018K},
+  url = {https://doi.org/10.1039/D2DD00018K},
 }
 
 @article{Ren_2023,
@@ -30,7 +34,9 @@
   number={7},
   pages={1797--1807},
   year={2023},
-  publisher={Royal Society of Chemistry}
+  publisher={Royal Society of Chemistry},
+  doi = {10.1039/D2SC05810C},
+  url = {https://doi.org/10.1039/D2SC05810C},
 }
 
 @article{Ren_2023_ml,
