--- a/thesis.bib
+++ b/thesis.bib
@@ -2,13 +2,12 @@
 	doi = {10.1021/acs.jctc.2c00798},
 	url = {https://doi.org/10.1021/acs.jctc.2c00798},
 	year = 2023,
-	month = {feb},
+	month = Feb,
 	publisher = {American Chemical Society ({ACS})},
 	author = {Kaihang Shi and Zhao Li and Dylan M. Anstine and Dai Tang and Coray M. Colina and David S. Sholl and J. Ilja Siepmann and Randall Q. Snurr},
 	title = {Two-Dimensional Energy Histograms as Features for Machine Learning to Predict Adsorption in Diverse Nanoporous Materials},
 	journal = {J. Chem. Theory Comput.}
 }
-
 @article{Widom1963,
   author = { Widom, B. },
   title = { Some Topics in the Theory of Fluids },
@@ -20,8 +19,6 @@
   doi = {10.1063/1.1734110},
   url = {http://doi.org/10.1063/1.1734110},
 }
-
-
 @book{national2019research,
 	address = {Washington, D.C.},
 	title = {A {Research} {Agenda} for {Transforming} {Separation} {Science}},
@@ -34,7 +31,6 @@
 	year = {2019},
 	doi = {10.17226/25421},
 }
-
 @article{Banerjee2018,
   author = { Banerjee, Debasis and Simon, Cory M. and Elsaidi, Sameh K. and Haranczyk, Maciej and Thallapally, Praveen K. },
   title = { Xenon Gas Separation and Storage Using Metal-Organic Frameworks },
@@ -46,12 +42,11 @@
   doi = {10.1016/j.chempr.2017.12.025},
   url = {http://doi.org/10.1016/j.chempr.2017.12.025},
 }
-
 @article{Chen_2014,
 	doi = {10.1038/nmat4035},
 	url = {https://doi.org/10.1038/nmat4035},
 	year = 2014,
-	month = {jul},
+	month = Jul,
 	publisher = {Springer Science and Business Media {LLC}},
 	volume = {13},
 	number = {10},
@@ -60,12 +55,11 @@
 	title = {Separation of rare gases and chiral molecules by selective binding in porous organic cages},
 	journal = {Nature Mater.}
 }
-
 @article{Lyu_2020,
 	doi = {10.1016/j.chempr.2020.08.008},
 	url = {https://doi.org/10.1016/j.chempr.2020.08.008},
 	year = 2020,
-	month = {sep},
+	month = Sep,
 	publisher = {Elsevier {BV}},
 	volume = {6},
 	number = {9},
@@ -74,12 +68,11 @@
 	title = {Digital Reticular Chemistry},
 	journal = {Chem}
 }
-
 @article{Chung_2019,
 	doi = {10.1021/acs.jced.9b00835},
 	url = {https://doi.org/10.1021/acs.jced.9b00835},
 	year = 2019,
-	month = {nov},
+	month = Nov,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {64},
 	number = {12},
@@ -88,7 +81,6 @@
 	title = {Advances, Updates, and Analytics for the Computation-Ready, Experimental Metal{\textendash}Organic Framework Database: {CoRE} {MOF} 2019},
 	journal = {Journal of Chemical {\&} Engineering Data}
 }   
-
 @article{Colon_2017,
   author = { Col\'on, Yamil J. and G\'omez-Gualdr\'on, Diego A. and Snurr, Randall Q. },
   title = { Topologically Guided, Automated Construction of Metal--Organic Frameworks and Their Evaluation for Energy-Related Applications },
@@ -100,7 +92,6 @@
   doi = {10.1021/acs.cgd.7b00848},
   url = {https://doi.org/10.1021/acs.cgd.7b00848},
 }
-
 @article{Boyd_2016,
 	doi = {10.1039/c6ce00407e},
 	url = {https://doi.org/10.1039/c6ce00407e},
@@ -113,21 +104,17 @@
 	title = {A generalized method for constructing hypothetical nanoporous materials of any net topology from graph theory},
 	journal = {{CrystEngComm}}
 }    
-
 @article{Wilmer_2011,
-	doi = {10.1038/nchem.1192},
-	url = {https://doi.org/10.1038/nchem.1192},
-	year = 2011,
-	month = {nov},
-	publisher = {Springer Science and Business Media {LLC}},
-	volume = {4},
-	number = {2},
-	pages = {83--89},
-	author = {Christopher E. Wilmer and Michael Leaf and Chang Yeon Lee and Omar K. Farha and Brad G. Hauser and Joseph T. Hupp and Randall Q. Snurr},
-	title = {Large-scale screening of hypothetical metal{\textendash}organic frameworks},
-	journal = {Nature Chem.}
-} 
-
+  author = { Wilmer, Christopher E. and Leaf, Michael and Lee, Chang Yeon and Farha, Omar K. and Hauser, Brad G. and Hupp, Joseph T. and Snurr, Randall Q. },
+  title = { Large-scale screening of hypothetical metal--organic frameworks },
+  journal = { Nature Chem. },
+  year = { 2012 },
+  volume = { 4 },
+  issue = { 2 },
+  pages = { 83--89 },
+  doi = {10.1038/nchem.1192},
+  url = {http://doi.org/10.1038/nchem.1192},
+}
 @article{dubbeldam2016,
   title={RASPA: molecular simulation software for adsorption and diffusion in flexible nanoporous materials},
   author={Dubbeldam, David and Calero, Sof{\'\i}a and Ellis, Donald E and Snurr, Randall Q},
@@ -138,7 +125,6 @@
   year={2016},
   publisher={Taylor \& Francis}
 }
-
 @article{rappe1992,
   title={UFF, a full periodic table force field for molecular mechanics and molecular dynamics simulations},
   author={Rapp{\'e}, Anthony K and Casewit, Carla J and Colwell, KS and Goddard III, William A and Skiff, W Mason},
@@ -149,12 +135,11 @@
   year={1992},
   publisher={ACS Publications}
 }
-
 @article{Ryan_2010,
 	doi = {10.1002/aic.12397},
 	url = {https://doi.org/10.1002/aic.12397},
 	year = 2010,
-	month = {sep},
+	month = Sep,
 	publisher = {Wiley},
 	volume = {57},
 	number = {7},
@@ -163,19 +148,17 @@
 	title = {Computational screening of metal-organic frameworks for xenon/krypton separation},
 	journal = {{AIChE} Journal}
 }
-
 @book{kerry2007industrial,
   title={Industrial gas handbook: gas separation and purification},
   author={Kerry, Frank G},
   year={2007},
   publisher={CRC press}
 }
-
 @article{Groom_2016,
 	doi = {10.1107/s2052520616003954},
 	url = {https://doi.org/10.1107/s2052520616003954},
 	year = 2016,
-	month = {apr},
+	month = Apr,
 	publisher = {International Union of Crystallography ({IUCr})},
 	volume = {72},
 	number = {2},
@@ -184,12 +167,11 @@
 	title = {The Cambridge Structural Database},
 	journal = {Acta Cryst. B}
 }
-
 @article{Li_2019,
 	doi = {10.1021/jacs.9b03422},
 	url = {https://doi.org/10.1021%2Fjacs.9b03422},
 	year = 2019,
-	month = {may},
+	month = May,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {141},
 	number = {23},
@@ -198,12 +180,11 @@
 	title = {A Robust Squarate-Based Metal{\textendash}Organic Framework Demonstrates Record-High Affinity and Selectivity for Xenon over Krypton},
 	journal = {J. Am. Chem. Soc.}
 }
-
 @article{Pei_2022,
 	doi = {10.1021/jacs.1c12873},
 	url = {https://doi.org/10.1021%2Fjacs.1c12873},
 	year = 2022,
-	month = {feb},
+	month = Feb,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {144},
 	number = {7},
@@ -212,12 +193,11 @@
 	title = {Robust and Radiation-Resistant Hofmann-Type Metal{\textendash}Organic Frameworks for Record Xenon/Krypton Separation},
 	journal = {J. Am. Chem. Soc.}
 }
-
 @article{Rycroft_2009,
 	doi = {10.1063/1.3215722},
 	url = {https://doi.org/10.1063/1.3215722},
 	year = 2009,
-	month = {dec},
+	month = Dec,
 	publisher = {{AIP} Publishing},
 	volume = {19},
 	number = {4},
@@ -226,7 +206,6 @@
 	title = {{VORO++}: A three-dimensional Voronoi cell library in C++},
 	journal = {Chaos}
 }
-
 @article{Simon_2015,
   author = { Simon, Cory M. and Mercado, Rocio and Schnell, Sondre K. and Smit, Berend and Haranczyk, Maciej },
   title = { What Are the Best Materials To Separate a Xenon/Krypton Mixture? },
@@ -238,14 +217,121 @@
   doi = {10.1021/acs.chemmater.5b01475},
   url = {https://doi.org/10.1021/acs.chemmater.5b01475},
 }
-
 @article{Jablonka_2022,
   doi = {10.1021/acscentsci.2c01177},
   url = {https://doi.org/10.1021/acscentsci.2c01177},
   year = {2023},
-  month = {mar},
+  month = Mar,
   publisher = {American Chemical Society ({ACS})},
   author = {Kevin Maik Jablonka and Andrew S. Rosen and Aditi S. Krishnapriyan and Berend Smit},
   title = {An Ecosystem for Digital Reticular Chemistry},
   journal = {{ACS} Central Science}
+}
+@article{Cole_2020,
+  author = { Cole, Jacqueline M. },
+  title = { A Design-to-Device Pipeline for Data-Driven Materials Discovery },
+  journal = { Acc. Chem. Res. },
+  year = { 2020 },
+  volume = { 53 },
+  issue = { 3 },
+  pages = { 599--610 },
+  doi = {10.1021/acs.accounts.9b00470},
+  url = {http://doi.org/10.1021/acs.accounts.9b00470},
+}
+@article{Hautier_2019,
+  author = { Hautier, Geoffroy },
+  title = { Finding the needle in the haystack: Materials discovery and design through computational ab initio high-throughput screening },
+  journal = { Comput. Mater. Sci. },
+  year = { 2019 },
+  volume = { 163 },
+  pages = { 108--116 },
+  doi = {10.1016/j.commatsci.2019.02.040},
+  url = {http://doi.org/10.1016/j.commatsci.2019.02.040},
+}
+@article{Stein_2019,
+  author = { Stein, Helge S. and Gregoire, John M. },
+  title = { Progress and prospects for accelerating materials science with automated and autonomous workflows },
+  journal = { Chem. Sci. },
+  year = { 2019 },
+  volume = { 10 },
+  issue = { 42 },
+  pages = { 9640--9649 },
+  doi = {10.1039/C9SC03766G},
+  url = {http://doi.org/10.1039/C9SC03766G},
+}
+@article{Ludwig_2019,
+  author = { Ludwig, Alfred },
+  title = { Discovery of new materials using combinatorial synthesis and high-throughput characterization of thin-film materials libraries combined with computational methods },
+  journal = { npj Comput. Mater. },
+  year = { 2019 },
+  volume = { 5 },
+  issue = { 1 },
+  pages = { 0121 },
+  doi = {10.1038/s41524-019-0205-0},
+  url = {http://doi.org/10.1038/s41524-019-0205-0},
+}
+@article{GomezGualdron_2014,
+  author = { G\'omez-Gualdr\'on, Diego A. and Wilmer, Christopher E. and Farha, Omar K. and Hupp, Joseph T. and Snurr, Randall Q. },
+  title = { Exploring the Limits of Methane Storage and Delivery in Nanoporous Materials },
+  journal = { J. Phys. Chem. C },
+  year = { 2014 },
+  volume = { 118 },
+  issue = { 13 },
+  pages = { 6941--6951 },
+  doi = {10.1021/jp502359q},
+  url = {http://doi.org/10.1021/jp502359q},
+}
+@article{SalcedoPerez_2019,
+  author = { Salcedo Perez, Jose Luis and Haranczyk, Maciej and Zimmermann, Nils Edvin Richard },
+  title = { High-throughput assessment of hypothetical zeolite materials for their synthesizeability and industrial deployability },
+  journal = {Z. Kristallogr.},
+  year = { 2019 },
+  volume = { 234 },
+  issue = { 7-8 },
+  pages = { 437--450 },
+  doi = {10.1515/zkri-2018-2155},
+  url = {http://doi.org/10.1515/zkri-2018-2155},
+}
+@article{Moliner_2019,
+  author = { Moliner, Manuel and Rom\'an-Leshkov, Yuriy and Corma, Avelino },
+  title = { Machine Learning Applied to Zeolite Synthesis: The Missing Link for Realizing High-Throughput Discovery },
+  journal = { Acc. Chem. Res. },
+  year = { 2019 },
+  volume = { 52 },
+  issue = { 10 },
+  pages = { 2971--2980 },
+  doi = {10.1021/acs.accounts.9b00399},
+  url = {http://doi.org/10.1021/acs.accounts.9b00399},
+}
+@article{Grazulis_2009,
+  author = { Gra\v{z}ulis, Saulius and Chateigner, Daniel and Downs, Robert T. and Yokochi, A. F. T. and Quir\'os, Miguel and Lutterotti, Luca and Manakova, Elena and Butkus, Justas and Moeck, Peter and Le Bail, Armel },
+  title = { Crystallography Open Database -- an open-access collection of crystal structures },
+  journal = { J. Appl. Crystallogr. },
+  year = { 2009 },
+  volume = { 42 },
+  issue = { 4 },
+  pages = { 726--729 },
+  doi = {10.1107/S0021889809016690},
+  url = {http://doi.org/10.1107/S0021889809016690},
+}
+@article{Groom_2016,
+  author = { Groom, Colin R. and Bruno, Ian J. and Lightfoot, Matthew P. and Ward, Suzanna C. },
+  title = { The Cambridge Structural Database },
+  journal = { Acta Crystallogr. B },
+  year = { 2016 },
+  volume = { 72 },
+  issue = { 2 },
+  pages = { 171--179 },
+  doi = {10.1107/S2052520616003954},
+  url = {http://doi.org/10.1107/S2052520616003954},
+}
+@article{PDB_1971,
+  title = { Crystallography: Protein Data Bank },
+  journal = { Nature New Biology },
+  year = { 1971 },
+  volume = { 233 },
+  issue = { 42 },
+  pages = { 223--223 },
+  doi = {10.1038/newbio233223b0},
+  url = {http://doi.org/10.1038/newbio233223b0},
 }
