--- a/4-ml.tex
+++ b/4-ml.tex
@@ -1,5 +1,6 @@
 % Emmanuel Ren PhD thesis -- (C) 2023
-\documentclass[thesis]{subfiles}
+%!TeX root = 4-ml
+\documentclass[main]{subfiles}
 
 \begin{document}
 
