--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -1,5 +1,6 @@
 % Emmanuel Ren PhD thesis -- (C) 2023
-\documentclass[thesis]{subfiles}
+%!TeX root = 5-diffusion
+\documentclass[main]{subfiles}
 
 \begin{document}
 
